fixing searching fitur
